# cppXb

./: .gitignore  CMakeLists.txt
src/: Gen.cpp  Gen.h  GenFlat.cpp  GenFlat.h  InterRep.h  Parsing.cpp  Parsing.h  main.cpp
tests/: CMakeLists.txt  gen-build-run.sh  test.cpp  test.xml
tests/xsd/: Test.xsd  TestIncl.xsd
tests/xsd/subdir/: Types.xsd
